##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.0)

##############################################################################
# Catkin
##############################################################################

project(qt_build)
find_package(catkin REQUIRED)
catkin_package(CFG_EXTRAS qt-ros.cmake)

