##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.0)

##############################################################################
# Catkin
##############################################################################

project(qt_create)
find_package(ROS COMPONENTS catkin)
catkin_project(qt_create)

# Nothing to see here, the Makefile is used to generate PyPI package.

